# ccl

./: .gitignore  CMakeLists.txt  README.md
.github/: FUNDING.yml
api/: CMakeLists.txt
api/include/cmp/core/: application.hpp  compiler.hpp  config.hpp  general.hpp  operating_system.hpp  platform.hpp  test_module.hpp  type_traits.hpp
api/include/cmp/desktop_gui/: close_event.hpp  desktop_gui_application.hpp  event.hpp  general.hpp  inclusion_assert.hpp  key_event.hpp  main.hpp  window.hpp  window_native_handle.hpp
api/include/cmp/desktop_gui/impl/common/: common_desktop_gui_application.hpp  common_window.hpp
api/include/cmp/desktop_gui/impl/gtk/: gtk_desktop_gui_application.hpp  gtk_window.hpp  gtk_window_native_handle.hpp
api/include/cmp/desktop_gui/impl/macos/: macos_desktop_gui_application.hpp  macos_window.hpp  macos_window_native_handle.hpp
api/include/cmp/desktop_gui/impl/windows/: windows_desktop_gui_application.hpp  windows_window.hpp  windows_window_native_handle.hpp
api/include/cmp/io/: data_input_stream.hpp  data_io_stream.hpp  data_output_stream.hpp  exceptions.hpp  file.hpp  general.hpp  inclusion_assert.hpp  input_resource.hpp  input_stream.hpp  io_buffer.hpp  io_resource.hpp  opaque_container_input_resource.hpp  opaque_container_io_resource.hpp  opaque_container_output_resource.hpp  output_resource.hpp  output_stream.hpp  seekable_input_resource.hpp  seekable_io_resource.hpp  seekable_output_resource.hpp  seekable_transfer_resource.hpp  string_io_resource.hpp  text_input_stream.hpp  text_io_stream.hpp  text_output_stream.hpp  transfer_resource.hpp  transparent_container_input_resource.hpp  transparent_container_io_resource.hpp  transparent_container_output_resource.hpp  uio.hpp
api/include/cmp/io/impl/: ctr_essence.hpp
api/include/cmp/io/impl/common/: common_uio.hpp
api/include/cmp/io/impl/unix_like/: unix_like_file.hpp  unix_like_uin.hpp  unix_like_uout.hpp
api/include/cmp/io/impl/windows/: windows_file.hpp  windows_uin.hpp  windows_uout.hpp
api/include/cmp/unicode/: algorithms.hpp  by_code_point.hpp  concepts.hpp  constants.hpp  examiners.hpp  exceptions.hpp  formats.hpp  formatters.hpp  inclusion_assert.hpp  parsers.hpp  type_traits.hpp
api/include/cmp/unicode/impl/: impl.hpp
api/src/cmp/core/: application.cpp  definitions.cpp  general.ipp  test_module.ipp
api/src/cmp/desktop_gui/: close_event.cpp  definitions.cpp  event.cpp  general.cpp  key_event.cpp
api/src/cmp/desktop_gui/impl/common/: common_desktop_gui_application.cpp  common_window.cpp
api/src/cmp/desktop_gui/impl/gtk/: gtk_desktop_gui_application.cpp  gtk_window.cpp
api/src/cmp/desktop_gui/impl/macos/: macos_desktop_gui_application.mm  macos_window.mm
api/src/cmp/desktop_gui/impl/windows/: windows_desktop_gui_application.cpp  windows_window.cpp
api/src/cmp/io/: data_input_stream.ipp  data_io_stream.ipp  data_output_stream.ipp  definitions.cpp  exceptions.cpp  file.cpp  general.cpp  general.ipp  input_resource.cpp  input_stream.ipp  io_buffer.cpp  io_resource.cpp  opaque_container_input_resource.ipp  opaque_container_io_resource.ipp  opaque_container_output_resource.ipp  output_resource.cpp  output_stream.ipp  seekable_input_resource.ipp  seekable_io_resource.ipp  seekable_output_resource.ipp  seekable_transfer_resource.ipp  string_io_resource.ipp  text_input_stream.ipp  text_io_stream.ipp  text_output_stream.ipp  transfer_resource.cpp  transparent_container_input_resource.ipp  transparent_container_io_resource.ipp  transparent_container_output_resource.ipp  uio.cpp
api/src/cmp/io/impl/: ctr_essence.ipp
api/src/cmp/io/impl/common/: common_uio.cpp
api/src/cmp/io/impl/unix_like/: unix_like_file.cpp  unix_like_uin.cpp  unix_like_uout.cpp
api/src/cmp/io/impl/windows/: windows_file.cpp  windows_uin.cpp  windows_uout.cpp
api/src/cmp/unicode/: algorithms.cpp  algorithms.ipp  by_code_point.cpp  definitions.cpp  examiners.ipp  exceptions.cpp  formats.cpp  formatters.ipp  parsers.cpp  parsers.ipp
api/src/cmp/unicode/impl/: impl.cpp
examples/: CMakeLists.txt
examples/desktop_gui_example/: CMakeLists.txt
examples/desktop_gui_example/src/: main.cpp
examples/gui_example/: CMakeLists.txt
examples/gui_example/src/: main.cpp
examples/unicode_stdio_example/: CMakeLists.txt
examples/unicode_stdio_example/src/: main.cpp
tests/: CMakeLists.txt
tests/automated/: CMakeLists.txt
tests/automated/core/: test_core_general.cpp
tests/automated/io/: test_container_transfer_resources.cpp  test_data_input_stream.cpp  test_data_io_stream.cpp  test_data_output_stream.cpp  test_file.cpp  test_io_general.cpp  test_string_io_resource.cpp  test_text_input_stream.cpp  test_text_io_stream.cpp  test_text_output_stream.cpp
tests/automated/unicode/: test_algorithms.cpp  test_by_code_point.cpp  test_examiners.cpp  test_formatters.cpp  test_parsers.cpp  test_type_traits.cpp
tests/data/: test_parsing_utf16_with_little_endian_bom.txt  test_read_utf16_with_big_endian_bom.txt  test_read_utf16_with_little_endian_bom.txt  test_read_utf32_with_big_endian_bom.txt  test_read_utf32_with_little_endian_bom.txt  test_read_utf8_without_bom.txt
tests/manual/: CMakeLists.txt  test_platform.cpp  test_uio.cpp
